hphp/test/slow/error_handler/1369.php.expectf

Fatal error: Uncaught exception 'Exception' with message '' in %s/test/slow/error_handler/1369.php:13
Stack trace:
%a {main}
NULL
GoodbyeNULL
